Begin MySQL database integration.
