# src/api/index.ts
@@ -1,9 +1,11 @@
 import { Router } from "express";
 import election from "./routes/election-routes";
+import person from "./routes/person-routes";
 
 export default () => {
-  const app = Router();
-  election(app);
+	const app = Router();
+	election(app);
+	person(app);
 
-  return app;
+	return app;
 };
