# src/api/routes/election-routes.ts
@@ -4,14 +4,14 @@ import ElectionService from "../../services/election-service";
 const route = Router();
 
 export default (app: Router) => {
-  app.use("/election", route);
+	app.use("/election", route);
 
-  route.get("/:electionId", async (req: Request, res: Response) => {
-    const electionId: number = +req.params.electionId;
-    // @TODO Dependency injection
-    const electionService = new ElectionService();
-    const result = await electionService.getElection(electionId);
+	route.get("/:electionId", async (req: Request, res: Response) => {
+		const electionId: number = +req.params.electionId;
+		// @TODO Dependency injection
+		const electionService = new ElectionService();
+		const result = await electionService.getElection(electionId);
 
-    res.send(result);
-  });
+		res.send(result);
+	});
 };
