# swagger.json
@@ -1,117 +1,117 @@
 {
-  "swagger": "3.0",
-  "info": {
-    "description": "",
-    "version": "1.0.0",
-    "title": "Ranked Choice Voting",
-    "termsOfService": "",
-    "contact": {
-      "email": ""
-    },
-    "license": {
-      "name": "GPL 3.0",
-      "url": ""
-    }
-  },
-  "host": "TODO get a domain",
-  "basePath": "/v1",
-  "tags": [
-    {
-      "name": "voting",
-      "description": "Democracy is cool"
-    },
-    {
-      "name": "election",
-      "description": "Operations about elections",
-      "externalDocs": {
-        "description": "Find out more about elections",
-        "url": "https://www.usa.gov/voting"
-      }
-    }
-  ],
-  "schemes": ["https", "http"],
-  "paths": {
-    "/election": {
-      "post": {
-        "tags": ["election"],
-        "summary": "Create election",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "createElection",
-        "produces": ["application/xml", "application/json"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Created election object",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/Election"
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
-    "securityDefinitions": {
-      "rcv_auth": {
-        "type": "oauth2",
-        "authorizationUrl": "TODO",
-        "flow": "implicit",
-        "scopes": {
-          "write:elections": "modify elections in your account",
-          "read:elections": "read your elections"
-        }
-      },
-      "api_key": {
-        "type": "apiKey",
-        "name": "api_key",
-        "in": "header"
-      }
-    },
-    "definitions": {
-      "Election": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "startDate": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "endDate": {
-            "type": "string",
-            "format": "date-time"
-          }
-        },
-        "xml": {
-          "name": "Election"
-        }
-      },
-      "ApiResponse": {
-        "type": "object",
-        "properties": {
-          "code": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "type": {
-            "type": "string"
-          },
-          "message": {
-            "type": "string"
-          }
-        }
-      }
-    },
-    "externalDocs": {
-      "description": "Find out more about Swagger",
-      "url": "http://swagger.io"
-    }
-  }
+	"swagger": "3.0",
+	"info": {
+		"description": "",
+		"version": "1.0.0",
+		"title": "Ranked Choice Voting",
+		"termsOfService": "",
+		"contact": {
+			"email": ""
+		},
+		"license": {
+			"name": "GPL 3.0",
+			"url": ""
+		}
+	},
+	"host": "TODO get a domain",
+	"basePath": "/v1",
+	"tags": [
+		{
+			"name": "voting",
+			"description": "Democracy is cool"
+		},
+		{
+			"name": "election",
+			"description": "Operations about elections",
+			"externalDocs": {
+				"description": "Find out more about elections",
+				"url": "https://www.usa.gov/voting"
+			}
+		}
+	],
+	"schemes": ["https", "http"],
+	"paths": {
+		"/election": {
+			"post": {
+				"tags": ["election"],
+				"summary": "Create election",
+				"description": "This can only be done by a logged in user.",
+				"operationId": "createElection",
+				"produces": ["application/xml", "application/json"],
+				"parameters": [
+					{
+						"in": "body",
+						"name": "body",
+						"description": "Created election object",
+						"required": true,
+						"schema": {
+							"$ref": "#/definitions/Election"
+						}
+					}
+				],
+				"responses": {
+					"default": {
+						"description": "successful operation"
+					}
+				}
+			}
+		},
+		"securityDefinitions": {
+			"rcv_auth": {
+				"type": "oauth2",
+				"authorizationUrl": "TODO",
+				"flow": "implicit",
+				"scopes": {
+					"write:elections": "modify elections in your account",
+					"read:elections": "read your elections"
+				}
+			},
+			"api_key": {
+				"type": "apiKey",
+				"name": "api_key",
+				"in": "header"
+			}
+		},
+		"definitions": {
+			"Election": {
+				"type": "object",
+				"properties": {
+					"id": {
+						"type": "integer",
+						"format": "int64"
+					},
+					"startDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"endDate": {
+						"type": "string",
+						"format": "date-time"
+					}
+				},
+				"xml": {
+					"name": "Election"
+				}
+			},
+			"ApiResponse": {
+				"type": "object",
+				"properties": {
+					"code": {
+						"type": "integer",
+						"format": "int32"
+					},
+					"type": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					}
+				}
+			}
+		},
+		"externalDocs": {
+			"description": "Find out more about Swagger",
+			"url": "http://swagger.io"
+		}
+	}
 }
